--- a/Poul12/SimpleToDoApp/web/WEB-INF/fragments/menu.jspf
+++ b/Poul12/SimpleToDoApp/web/WEB-INF/fragments/menu.jspf
@@ -1,27 +1,55 @@
 <%@ page contentType="text/html;charset=UTF-8" language="java" %>
 <%@ taglib uri="http://java.sun.com/jsp/jstl/core" prefix="c" %>
 
-<img id="logo" src="logo.png" />
+<head>
+    <title>Task list</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="http://code.jquery.com/jquery-1.11.2.min.js"></script>
+    <script src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+</head>
 
-<div class="menu">
-    <h2>Menu</h2>
-    <h3>Panel użytkownika</h3>
+<nav class="navbar navbar-inverse">
 
-    <c:choose>
-    <c:when test="${empty sessionScope.username}">
-    <ul style="display:inline;">
+    <div class="container-fluid">
 
-        <li><a href="register.jsp">Zarejestruj się</a></li>
-        <li><a href="login.jsp">Zaloguj się</a></li>
-        </c:when>
-        <c:otherwise>
-            <li><a href="userpanel.jsp">Panel użytkownika</a></li>
-            <li><a href="logout">Wyloguj się</a></li>
-        </c:otherwise>
+        <div class="navbar-header">
 
-        </c:choose>
-        <h3>Zadania</h3>
-        <li><a href="addtask.jsp">Stwórz nowe zadanie</a></li>
-        <li><a href="taskslist.jsp">Lista zadań</a></li>
-    </ul>
-</div>
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">SimpleTodoApp</a>
+
+        </div>
+
+        <div class="collapse navbar-collapse" id="myNavbar">
+
+            <ul class="nav navbar-nav">
+                <li class="active"><a href="index.jsp">Home</a></li>
+                <li><a href="addtask.jsp">Create task</a></li>
+                <li><a href="taskslist.jsp">Display task</a></li>
+                <li><a href="#">About</a></li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+                <c:choose>
+                <c:when test="${empty sessionScope.username}">
+                    <li><a href="register.jsp"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+                    <li><a href="login.jsp"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+                </c:when>
+                <c:otherwise>
+                    <li><a href="userpanel.jsp"><span class="glyphicon glyphicon-user"></span> User Panel</a></li>
+                    <li><a href="logout"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
+                </c:otherwise>
+                </c:choose>
+            </ul>
+
+        </div>
+
+    </div>
+
+</nav>
