--- a/Poul12/SimpleToDoApp/web/WEB-INF/fragments/menu.jspf
+++ b/Poul12/SimpleToDoApp/web/WEB-INF/fragments/menu.jspf
@@ -2,11 +2,9 @@
 <%@ taglib uri="http://java.sun.com/jsp/jstl/core" prefix="c" %>
 
 <head>
-    <title>Task list</title>
+    <title>Menu</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="http://code.jquery.com/jquery-1.11.2.min.js"></script>
-    <script src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <link rel="stylesheet" href="${pageContext.request.contextPath}/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="${pageContext.request.contextPath}/js/bootstrap.min.js"></script>
@@ -30,19 +28,25 @@
         <div class="collapse navbar-collapse" id="myNavbar">
 
             <ul class="nav navbar-nav">
-                <li class="active"><a href="${pageContext.request.contextPath}/index.jsp">Home</a></li>
-                <li><a href="${pageContext.request.contextPath}/addtask.jsp">Create task</a></li>
+                <li class="active"><a href="${pageContext.request.contextPath}/WEB-INF/pages/index.jsp">Home</a></li>
+                <li><a href="addTask">Create task</a></li>
                 <li><a href="tasks">Display task</a></li>
                 <li><a href="#">About</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <c:choose>
                 <c:when test="${empty sessionScope.username}">
-                    <li><a href="${pageContext.request.contextPath}/register.jsp"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-                    <li><a href="${pageContext.request.contextPath}/login.jsp"><span class="glyphicon glyphicon-log-in"></span> Sign In</a></li>
+                    <li><a href="register"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+                    <li><a href="login"><span class="glyphicon glyphicon-log-in"></span> Sign In</a></li>
                 </c:when>
                 <c:otherwise>
-                    <li><a href="${pageContext.request.contextPath}/userpanel.jsp"><span class="glyphicon glyphicon-user"></span><c:out value="${sessionScope.username}"/></a></li>
+                    <li>
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-user"></span><c:out value="${sessionScope.username}"/></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="editUser">Edit Account</a></li>
+                            <li><a href="deleteUser">Delete Account</a></li>
+                        </ul>
+                    </li>
                     <li><a href="logout"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
                 </c:otherwise>
                 </c:choose>
