--- a/Poul12/SimpleToDoApp/web/WEB-INF/fragments/menu.jspf
+++ b/Poul12/SimpleToDoApp/web/WEB-INF/fragments/menu.jspf
@@ -1,34 +1,23 @@
 <%@ page contentType="text/html;charset=UTF-8" language="java" %>
 <%@ taglib uri="http://java.sun.com/jsp/jstl/core" prefix="c" %>
 
-<head>
-    <title>Menu</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="${pageContext.request.contextPath}/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="${pageContext.request.contextPath}/js/bootstrap.min.js"></script>
-</head>
-
 <nav class="navbar navbar-inverse">
 
-    <div class="container-fluid">
+    <div class="container">
 
         <div class="navbar-header">
 
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
+                <span class="glyphicon glyphicon-list"></span>
             </button>
-            <a class="navbar-brand" href="#">SimpleTodoApp</a>
+            <a class="navbar-brand" href="${pageContext.request.contextPath}">SimpleTodoApp</a>
 
         </div>
 
         <div class="collapse navbar-collapse" id="myNavbar">
 
             <ul class="nav navbar-nav">
-                <li class="active"><a href="${pageContext.request.contextPath}/WEB-INF/pages/index.jsp">Home</a></li>
+                <li class="active"><a href="${pageContext.request.contextPath}">Home</a></li>
                 <li><a href="addTask">Create task</a></li>
                 <li><a href="tasks">Display task</a></li>
                 <li><a href="#">About</a></li>
