--- a/Poul12/SimpleToDoApp/src/main/resources/templates/deleteuser.html
+++ b/Poul12/SimpleToDoApp/src/main/resources/templates/deleteuser.html
@@ -1,4 +1,4 @@
-<html xmlns:th="http://www.thymeleaf.org" lang="PL">
+<html xmlns:th="http://www.thymeleaf.org" lang="pl-PL">
 <head>
     <title>Login</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,7 +16,7 @@
 
         <div class="col-sm-6 col-md-4 col-md-offset-4">
 
-            <form action="#" th:action="@{/deleteUser}" method="post">
+            <form th:action="@{/deleteUser}" method="post">
                 <h2>Delete account</h2>
                 <div class="form-group">
                     <label for="InputPassword">Enter your password to delete account</label>
