--- a/Poul12/SimpleToDoApp/src/main/resources/templates/edituser.html
+++ b/Poul12/SimpleToDoApp/src/main/resources/templates/edituser.html
@@ -1,4 +1,4 @@
-<html xmlns:th="http://www.thymeleaf.org" lang="PL">
+<html xmlns:th="http://www.thymeleaf.org" lang="pl-PL">
 <head>
     <title>Edit user</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -39,7 +39,7 @@
                     <div class="form-group">
                         <label for="InputRepeatedPassword">Repeat password</label>
                         <input type="password" class="form-control" id="InputRepeatedPassword"
-                               placeholder="Repeat password" name="repeated-pass" required>
+                               placeholder="Repeat password" name="repeatedPassword" required>
                     </div>
                     <button type="submit" class="btn btn-primary">Save</button>
                 </form>
