--- a/Poul12/SimpleToDoApp/src/main/resources/templates/footer.html
+++ b/Poul12/SimpleToDoApp/src/main/resources/templates/footer.html
@@ -1,4 +1,4 @@
-<html xmlns:th="http://www.thymeleaf.org" lang="PL">
+<html xmlns:th="http://www.thymeleaf.org" lang="pl-PL">
 
 <footer th:fragment="_footer">
     <div class="container">
