--- a/Poul12/SimpleToDoApp/src/main/resources/templates/resetpass.html
+++ b/Poul12/SimpleToDoApp/src/main/resources/templates/resetpass.html
@@ -1,4 +1,4 @@
-<html xmlns:th="http://www.thymeleaf.org" lang="PL">
+<html xmlns:th="http://www.thymeleaf.org" lang="pl-PL">
 <head>
     <title>Reset Password</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -20,8 +20,7 @@
                 <h2>Reset password</h2>
                 <div class="form-group">
                     <label for="InputEmail">Email</label>
-                    <input type="email" class="form-control" id="InputEmail" placeholder="Enter email" name="email"
-                           required>
+                    <input type="email" class="form-control" id="InputEmail" placeholder="Enter email" name="email" required>
                 </div>
                 <button type="submit" class="btn btn-primary">Reset</button>
             </form>
