--- a/Poul12/SimpleToDoApp/src/main/resources/templates/addtask.html
+++ b/Poul12/SimpleToDoApp/src/main/resources/templates/addtask.html
@@ -1,4 +1,4 @@
-<html xmlns:th="http://www.thymeleaf.org" lang="PL">
+<html xmlns:th="http://www.thymeleaf.org" lang="pl-PL">
 <head>
     <title>Create new task</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,7 +16,7 @@
 
         <div class="col-sm-6 col-md-4 col-md-offset-4">
 
-            <form action="#" th:action="@{/addTask}" method="post" th:object="${task}">
+            <form th:action="@{/addTask}" method="post" th:object="${task}">
                 <h2>Add new task</h2>
                 <div class="form-group">
                     <label for="InputTitle">Title</label>
@@ -31,7 +31,7 @@
                     <textarea class="form-control" rows="5" id="InputDescription" th:field="*{description}" wrap="hard"
                               maxlength="150" placeholder="Description task... (max 150 signs)"></textarea>
                 </div>
-                <input type="hidden" th:field="*{taskDone}" value="false">
+                <input type="hidden" th:field="*{taskDone}">
                 <button type="submit" class="btn btn-primary">Add</button>
             </form>
 
