--- a/Poul12/SimpleToDoApp/src/main/resources/templates/index.html
+++ b/Poul12/SimpleToDoApp/src/main/resources/templates/index.html
@@ -1,8 +1,9 @@
-<html xmlns:th="http://www.thymeleaf.org" lang="PL">
+<html xmlns:th="http://www.thymeleaf.org" lang="pl-PL">
 <head>
     <title>Main Page</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/../WEB-INF/css/styles.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 </head>
