--- a/Poul12/SimpleToDoApp/src/main/resources/templates/menu.html
+++ b/Poul12/SimpleToDoApp/src/main/resources/templates/menu.html
@@ -1,4 +1,4 @@
-<html xmlns:th="http://www.thymeleaf.org" lang="PL">
+<html xmlns:th="http://www.thymeleaf.org" lang="pl-PL">
 
 <nav th:fragment="_menu" >
 
