--- a/Poul12/SimpleToDoApp/src/main/resources/templates/message.html
+++ b/Poul12/SimpleToDoApp/src/main/resources/templates/message.html
@@ -1,4 +1,4 @@
-<html xmlns:th="http://www.thymeleaf.org" lang="PL">
+<html xmlns:th="http://www.thymeleaf.org" lang="pl-PL">
 <head>
     <title>Message</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
