--- a/Poul12/SimpleToDoApp/src/main/resources/templates/register.html
+++ b/Poul12/SimpleToDoApp/src/main/resources/templates/register.html
@@ -1,4 +1,4 @@
-<html xmlns:th="http://www.thymeleaf.org" lang="PL">
+<html xmlns:th="http://www.thymeleaf.org" lang="pl-PL">
 <head>
     <title>Register</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,7 +16,7 @@
 
         <div class="col-sm-6 col-md-4 col-md-offset-4">
 
-            <form action="#" th:action="@{/register}" method="post" th:object="${user}">
+            <form th:action="@{/register}" method="post" th:object="${user}">
                 <h2>Sign up</h2>
                 <div class="form-group">
                     <label for="InputUsername">Username</label>
