--- a/Poul12/SimpleToDoApp/src/main/resources/templates/edituser.html
+++ b/Poul12/SimpleToDoApp/src/main/resources/templates/edituser.html
@@ -25,21 +25,25 @@
                         <label for="InputUsername">Username</label>
                         <input type="text" class="form-control" id="InputUsername" placeholder="Enter username"
                                name="username" th:field="*{username}" required>
+                        <p th:if="${#fields.hasErrors('username')}" th:errors="*{username}">
                     </div>
                     <div class="form-group">
                         <label for="InputEmail">Email address</label>
                         <input type="email" class="form-control" id="InputEmail" placeholder="Enter email" name="email"
                                th:field="*{email}" required>
+                        <p th:if="${#fields.hasErrors('email')}" th:errors="*{email}">
                     </div>
                     <div class="form-group">
                         <label for="InputPassword">Password</label>
                         <input type="password" class="form-control" id="InputPassword" placeholder="Password"
-                               name="password" required>
+                               th:field="password" required>
+                        <p th:if="${#fields.hasErrors('password')}" th:errors="*{password}">
                     </div>
                     <div class="form-group">
                         <label for="InputRepeatedPassword">Repeat password</label>
                         <input type="password" class="form-control" id="InputRepeatedPassword"
-                               placeholder="Repeat password" name="repeatedPassword" required>
+                               placeholder="Repeat password" th:field="repeatedPassword" required>
+                        <p th:if="${#fields.hasErrors('repeatedPassword')}" th:errors="*{repeatedPassword}">
                     </div>
                     <button type="submit" class="btn btn-primary">Save</button>
                 </form>
