--- a/Poul12/SimpleToDoApp/src/main/resources/templates/login.html
+++ b/Poul12/SimpleToDoApp/src/main/resources/templates/login.html
@@ -16,7 +16,7 @@
 
         <div class="col-sm-6 col-md-4 col-md-offset-4">
 
-            <form action="#" th:action="@{/login}" method="post">
+            <form th:action="@{/login}" method="post">
                 <h2>Sign in</h2>
                 <div class="form-group">
                     <label for="InputUsername">Username</label>
