--- a/Poul12/SimpleToDoApp/src/main/resources/templates/register.html
+++ b/Poul12/SimpleToDoApp/src/main/resources/templates/register.html
@@ -22,21 +22,25 @@
                     <label for="InputUsername">Username</label>
                     <input type="text" class="form-control" id="InputUsername" placeholder="Enter username"
                            th:field="*{username}" required>
+                    <p th:if="${#fields.hasErrors('username')}" th:errors="*{username}">
                 </div>
                 <div class="form-group">
                     <label for="InputEmail">Email address</label>
                     <input type="email" class="form-control" id="InputEmail" placeholder="Enter email" th:field="*{email}"
                            required>
+                    <p th:if="${#fields.hasErrors('email')}" th:errors="*{email}">
                 </div>
                 <div class="form-group">
                     <label for="InputPassword">Password</label>
                     <input type="password" class="form-control" id="InputPassword" placeholder="Password"
                            th:field="*{password}" required>
+                    <p th:if="${#fields.hasErrors('password')}" th:errors="*{password}">
                 </div>
                 <div class="form-group">
                     <label for="InputRepeatedPassword">Repeat password</label>
                     <input type="password" class="form-control" id="InputRepeatedPassword" placeholder="Repeat password"
                            th:field="*{repeatedPassword}" required>
+                    <p th:if="${#fields.hasErrors('repeatedPassword')}" th:errors="*{repeatedPassword}">
                 </div>
                 <button type="submit" class="btn btn-primary">Sign up</button>
             </form>
