--- a/Poul12/SimpleToDoApp/src/main/resources/templates/addtask.html
+++ b/Poul12/SimpleToDoApp/src/main/resources/templates/addtask.html
@@ -21,15 +21,18 @@
                 <div class="form-group">
                     <label for="InputTitle">Title</label>
                     <input type="text" class="form-control" id="InputTitle" placeholder="Enter title" th:field="*{title}" required>
+                    <p th:if="${#fields.hasErrors('title')}" th:errors="*{title}">
                 </div>
                 <div class="form-group">
                     <label for="InputDate">Date</label>
                     <input type="date" class="form-control" id="InputDate" th:field="*{date}" />
+                    <p th:if="${#fields.hasErrors('date')}" th:errors="*{date}">
                 </div>
                 <div class="form-group">
                     <label for="InputDescription">Description</label>
                     <textarea class="form-control" rows="5" id="InputDescription" th:field="*{description}" wrap="hard"
                               maxlength="150" placeholder="Description task... (max 150 signs)"></textarea>
+                    <p th:if="${#fields.hasErrors('description')}" th:errors="*{description}">
                 </div>
                 <input type="hidden" th:field="*{taskDone}">
                 <button type="submit" class="btn btn-primary">Add</button>
