--- a/Poul12/SimpleToDoApp/src/main/resources/templates/edituser.html
+++ b/Poul12/SimpleToDoApp/src/main/resources/templates/edituser.html
@@ -36,13 +36,13 @@
                     <div class="form-group">
                         <label for="InputPassword">Password</label>
                         <input type="password" class="form-control" id="InputPassword" placeholder="Password"
-                               th:field="password" required>
+                               th:field="*{password}" required>
                         <p th:if="${#fields.hasErrors('password')}" th:errors="*{password}">
                     </div>
                     <div class="form-group">
                         <label for="InputRepeatedPassword">Repeat password</label>
                         <input type="password" class="form-control" id="InputRepeatedPassword"
-                               placeholder="Repeat password" th:field="repeatedPassword" required>
+                               placeholder="Repeat password" th:field="*{repeatedPassword}" required>
                         <p th:if="${#fields.hasErrors('repeatedPassword')}" th:errors="*{repeatedPassword}">
                     </div>
                     <button type="submit" class="btn btn-primary">Save</button>
