--- a/Poul12/SimpleToDoApp/src/main/resources/templates/task_list.html
+++ b/Poul12/SimpleToDoApp/src/main/resources/templates/task_list.html
@@ -5,6 +5,16 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+    <style>
+        .footer {
+            position: absolute;
+            bottom: 0;
+            width: 100%;
+            /* Set the fixed height of the footer here */
+            height: 60px;
+            background-color: #f5f5f5;
+        }
+    </style>
 </head>
 <body>
 
@@ -82,10 +92,10 @@
 
                 </td>
                 <td>
-                    <a th:href="@{/editTask(taskId=*{taskId},title=*{title},date=*{date},description=*{description},taskDone=*{taskDone})}">
+                    <a th:href="@{/editTask(id=*{id},title=*{title},date=*{date},description=*{description},taskDone=*{taskDone})}">
                         <button type="button" class="btn btn-primary">Edit</button>
                     </a>
-                    <a th:href="@{/deleteTask(taskId=*{taskId})}">
+                    <a th:href="@{/deleteTask(id=*{id})}">
                         <button type="button" class="btn btn-primary">Delete</button>
                     </a>
                 </td>
