--- a/Poul12/SimpleToDoApp/src/main/resources/templates/delete_user.html
+++ b/Poul12/SimpleToDoApp/src/main/resources/templates/delete_user.html
@@ -1,10 +1,20 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="pl-PL">
 <head>
-    <title>Reset Password</title>
+    <title>Login</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+    <style>
+        .footer {
+            position: absolute;
+            bottom: 0;
+            width: 100%;
+            /* Set the fixed height of the footer here */
+            height: 60px;
+            background-color: #f5f5f5;
+        }
+    </style>
 </head>
 <body>
 
@@ -16,13 +26,16 @@
 
         <div class="col-sm-6 col-md-4 col-md-offset-4">
 
-            <form action="reset" method="post">
-                <h2>Reset password</h2>
+            <form th:action="@{/deleteUser}" method="post">
+                <h2>Delete account</h2>
                 <div class="form-group">
-                    <label for="InputEmail">Email</label>
-                    <input type="email" class="form-control" id="InputEmail" placeholder="Enter email" name="email" required>
+                    <label for="InputPassword">Enter your password to delete account</label>
+                    <input type="password" class="form-control" id="InputPassword" placeholder="Enter password"
+                           name="confirmedPassword" required>
                 </div>
-                <button type="submit" class="btn btn-primary">Reset</button>
+                <div class="col-md-8">
+                    <button type="submit" class="btn btn-block btn-danger">Delete account</button>
+                </div>
             </form>
 
         </div>
