--- a/Poul12/SimpleToDoApp/src/main/resources/templates/edit_task.html
+++ b/Poul12/SimpleToDoApp/src/main/resources/templates/edit_task.html
@@ -5,6 +5,16 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+    <style>
+        .footer {
+            position: absolute;
+            bottom: 0;
+            width: 100%;
+            /* Set the fixed height of the footer here */
+            height: 60px;
+            background-color: #f5f5f5;
+        }
+    </style>
 </head>
 <body>
 
@@ -18,22 +28,22 @@
 
             <form th:action="@{/editTask}" method="post" th:object="${task}">
                 <h2>Edit task</h2>
-                <input type="hidden" name="taskId" th:field="*{taskId}"/>
+                <input type="hidden" name="taskId" th:field="*{id}"/>
                 <div class="form-group">
                     <label for="InputTitle">Title</label>
                     <input type="text" class="form-control" id="InputTitle" placeholder="Enter title" name="title" th:field="*{title}" required>
-                    <p th:if="${#fields.hasErrors('title')}" th:errors="*{title}">
+                    <p class="alert alert-danger" th:if="${#fields.hasErrors('title')}" th:errors="*{title}">
                 </div>
                 <div class="form-group">
                     <label for="InputDate">Date</label>
                     <input type="date" class="form-control" id="InputDate" name="date" th:field="*{date}" required>
-                    <p th:if="${#fields.hasErrors('date')}" th:errors="*{date}">
+                    <p class="alert alert-danger" th:if="${#fields.hasErrors('date')}" th:errors="*{date}">
                 </div>
                 <div class="form-group">
                     <label for="InputDescription">Description</label>
                     <textarea class="form-control" rows="5" id="InputDescription" name="description" wrap="hard"
                               maxlength="150" placeholder="Description task... (max 150 signs)" th:field="*{description}"></textarea>
-                    <p th:if="${#fields.hasErrors('description')}" th:errors="*{description}">
+                    <p class="alert alert-danger" th:if="${#fields.hasErrors('description')}" th:errors="*{description}">
                 </div>
                 <div class="form-group">
                     <input type="radio" id="CheckTaskDone" name="taskDone" value="true">
@@ -43,7 +53,7 @@
                     <label for="CheckTaskUnDone">Undone</label>
                 </div>
                 <br>
-                <button type="submit" class="btn btn-primary">Save</button>
+                <button type="submit" class="btn btn-block btn-primary">Save</button>
             </form>
 
         </div>
