--- a/Poul12/SimpleToDoApp/src/main/resources/templates/footer.html
+++ b/Poul12/SimpleToDoApp/src/main/resources/templates/footer.html
@@ -1,10 +1,13 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="pl-PL">
 
 <footer th:fragment="_footer">
-    <div class="container">
-        <p class="navbar-text">Simple ToDo App - developed by Poul12 2019</p>
+
+    <div class="footer-copyright text-center bottom py-3">© 2019 Copyright:
+        <a href="https://www.facebook.com/pawel.gonera/"> Paweł Gónera</a>
     </div>
+
 </footer>
+
 
 
 </html>
