--- a/Poul12/SimpleToDoApp/src/main/resources/templates/login.html
+++ b/Poul12/SimpleToDoApp/src/main/resources/templates/login.html
@@ -5,6 +5,16 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+    <style>
+        .footer {
+            position: absolute;
+            bottom: 0;
+            width: 100%;
+            /* Set the fixed height of the footer here */
+            height: 60px;
+            background-color: #f5f5f5;
+        }
+    </style>
 </head>
 <body>
 
@@ -16,7 +26,7 @@
 
         <div class="col-sm-6 col-md-4 col-md-offset-4">
 
-            <form th:action="@{/login}" method="post">
+            <form th:action="@{/processLogin}" method="post">
                 <h2>Sign in</h2>
                 <div class="form-group">
                     <label for="InputUsername">Username</label>
@@ -28,10 +38,15 @@
                     <input type="password" class="form-control" id="InputPassword" placeholder="Password"
                            name="password" required>
                 </div>
-                <div class="col-md-8">
-                    <button type="submit" class="btn btn-primary">Sign in</button>
+                <div th:if="${param.error}" class="alert alert-danger">
+                    Invalid username/password
                 </div>
                 <small><a th:href="@{/reset}">Forget password</a></small>
+                <div>
+                    <button type="submit" class="btn btn-block btn-primary">Sign in</button>
+                </div>
+                <input type="hidden" name="${_csrf.parameterName}" value="${_csrf.token}" />
+
             </form>
 
         </div>
