--- a/Poul12/SimpleToDoApp/src/main/resources/templates/register.html
+++ b/Poul12/SimpleToDoApp/src/main/resources/templates/register.html
@@ -5,6 +5,16 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+    <style>
+        .footer {
+            position: absolute;
+            bottom: 0;
+            width: 100%;
+            /* Set the fixed height of the footer here */
+            height: 60px;
+            background-color: #f5f5f5;
+        }
+    </style>
 </head>
 <body>
 
@@ -21,24 +31,24 @@
                 <div class="form-group">
                     <label for="InputUsername">Username</label>
                     <input type="text" class="form-control" id="InputUsername" placeholder="Enter username" th:field="*{username}" required>
-                    <p th:if="${#fields.hasErrors('username')}" th:errors="*{username}">
+                    <p class="alert alert-danger" th:if="${#fields.hasErrors('username')}" th:errors="*{username}">
                 </div>
                 <div class="form-group">
                     <label for="InputEmail">Email address</label>
                     <input type="email" class="form-control" id="InputEmail" placeholder="Enter email" th:field="*{email}" required>
-                    <p th:if="${#fields.hasErrors('email')}" th:errors="*{email}">
+                    <p class="alert alert-danger" th:if="${#fields.hasErrors('email')}" th:errors="*{email}">
                 </div>
                 <div class="form-group">
                     <label for="InputPassword">Password</label>
                     <input type="password" class="form-control" id="InputPassword" placeholder="Password" th:field="*{password}" required>
-                    <p th:if="${#fields.hasErrors('password')}" th:errors="*{password}">
+                    <p class="alert alert-danger" th:if="${#fields.hasErrors('password')}" th:errors="*{password}">
                 </div>
                 <div class="form-group">
                     <label for="InputRepeatedPassword">Repeat password</label>
                     <input type="password" class="form-control" id="InputRepeatedPassword" placeholder="Repeat password" th:field="*{repeatedPassword}" required>
-                    <p th:if="${#fields.hasErrors('repeatedPassword')}" th:errors="*{repeatedPassword}">
+                    <p class="alert alert-danger" th:if="${#fields.hasErrors('repeatedPassword')}" th:errors="*{repeatedPassword}">
                 </div>
-                <button type="submit" class="btn btn-primary">Sign up</button>
+                <button type="submit" class="btn btn-block btn-primary">Sign up</button>
             </form>
 
         </div>
