--- a/Poul12/SimpleToDoApp/src/main/resources/templates/reset_pass.html
+++ b/Poul12/SimpleToDoApp/src/main/resources/templates/reset_pass.html
@@ -26,7 +26,7 @@
 
         <div class="col-sm-6 col-md-4 col-md-offset-4">
 
-            <form action="reset" method="post">
+            <form th:action="@{/reset}" method="post">
                 <h2>Reset password</h2>
                 <div class="form-group">
                     <label for="InputEmail">Email</label>
