--- a/Poul12/SimpleToDoApp/src/main/resources/templates/login.html
+++ b/Poul12/SimpleToDoApp/src/main/resources/templates/login.html
@@ -1,10 +1,13 @@
-<html xmlns:th="http://www.thymeleaf.org" lang="pl-PL">
+<html xmlns:th="http://www.thymeleaf.org" lang="pl-PL" ng-app="app">
 <head>
     <title>Login</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="node_modules/angular/angular.js"></script>
+    <script type="text/javascript" src="node_modules/angular-resource/angular-resource.js"></script>
+    <script type="text/javascript" src="js/app.js"></script>
     <style>
         .footer {
             position: absolute;
@@ -16,7 +19,7 @@
         }
     </style>
 </head>
-<body>
+<body ng-controller="LoginController as logControl">
 
 <nav th:include="menu :: _menu" class="navbar navbar-inverse"></nav>
 
@@ -27,7 +30,7 @@
         <div class="col-sm-6 col-md-4 col-md-offset-4">
 
             <form th:action="@{/processLogin}" method="post">
-                <h2>Sign in</h2>
+                <h2>{{logControl.signIn}}Sign in</h2>
                 <div class="form-group">
                     <label for="InputUsername">Username</label>
                     <input type="text" class="form-control" id="InputUsername" placeholder="Enter username"
