--- a/Poul12/SimpleToDoApp/src/main/resources/templates/login.html
+++ b/Poul12/SimpleToDoApp/src/main/resources/templates/login.html
@@ -1,4 +1,4 @@
-<html xmlns:th="http://www.thymeleaf.org" lang="pl-PL" ng-app="app">
+<html xmlns:th="http://www.thymeleaf.org" lang="pl-PL">
 <head>
     <title>Login</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,7 +19,7 @@
         }
     </style>
 </head>
-<body ng-controller="LoginController as logControl">
+<body >
 
 <nav th:include="menu :: _menu" class="navbar navbar-inverse"></nav>
 
@@ -30,7 +30,7 @@
         <div class="col-sm-6 col-md-4 col-md-offset-4">
 
             <form th:action="@{/processLogin}" method="post">
-                <h2>{{logControl.signIn}}Sign in</h2>
+                <h2>Sign in</h2>
                 <div class="form-group">
                     <label for="InputUsername">Username</label>
                     <input type="text" class="form-control" id="InputUsername" placeholder="Enter username"
