--- a/Poul12/SimpleToDoApp/src/main/resources/templates/index.html
+++ b/Poul12/SimpleToDoApp/src/main/resources/templates/index.html
@@ -1,13 +1,11 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="pl-PL">
 <head>
     <title>Main Page</title>
-    <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/../WEB-INF/css/styles.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="node_modules/angular/angular.js"></script>
-    <script type="text/javascript" src="node_modules/angular-resource/angular-resource.js"></script>
-    <script type="text/javascript" src="js/app.js"></script>
     <style>
         .footer {
             position: absolute;
