--- a/Poul12/SimpleToDoApp/src/main/resources/static/styles.css
+++ b/Poul12/SimpleToDoApp/src/main/resources/static/styles.css
@@ -2,7 +2,8 @@
     position: absolute;
     bottom: 0;
     width: 100%;
-    /* Set the fixed height of the footer here */
     height: 60px;
     background-color: #f5f5f5;
+    padding: 10px;
+    text-align: center;
 }
