--- a/Poul12/SimpleToDoApp/src/main/resources/templates/delete_user.html
+++ b/Poul12/SimpleToDoApp/src/main/resources/templates/delete_user.html
@@ -5,16 +5,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-    <style>
-        .footer {
-            position: absolute;
-            bottom: 0;
-            width: 100%;
-            /* Set the fixed height of the footer here */
-            height: 60px;
-            background-color: #f5f5f5;
-        }
-    </style>
+    <link href="../static/styles.css" th:href="@{/styles.css}" rel="stylesheet">
 </head>
 <body>
 
