--- a/Poul12/SimpleToDoApp/src/main/resources/templates/login.html
+++ b/Poul12/SimpleToDoApp/src/main/resources/templates/login.html
@@ -8,17 +8,7 @@
     <script type="text/javascript" src="node_modules/angular/angular.js"></script>
     <script type="text/javascript" src="node_modules/angular-resource/angular-resource.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
-    <style>
-        .footer {
-            position: absolute;
-            bottom: 0;
-            width: 100%;
-            height: 60px;
-            background-color: #f5f5f5;
-            padding: 10px;
-            text-align: center;
-        }
-    </style>
+    <link href="../static/styles.css" th:href="@{/styles.css}" rel="stylesheet">
 </head>
 <body >
 
